Change package structure, remove unused classes, fix physiscs